@@ -61,4 +61,36 @@ is $pointer->get(
   [{'f~o~o~/b~' => {'a~' => {'r' => 'baz'}}}] => '/0/f~0o~0o~0~1b~0/a~0/r'),
   'baz', '"/0/f~0o~0o~0~1b~0/a~0/r" is "baz"';
 
+# RFC 6901
+my $hash = {
+  foo    => ['bar', 'baz'],
+  ''     => 0,
+  'a/b'  => 1,
+  'c%d'  => 2,
+  'e^f'  => 3,
+  'g|h'  => 4,
+  'i\\j' => 5,
+  'k"l'  => 6,
+  ' '    => 7,
+  'm~n'  => 8
+};
+is_deeply $pointer->get($hash, ''), $hash, 'empty pointer is whole document';
+is_deeply $pointer->get($hash, '/foo'), ['bar', 'baz'],
+  '"/foo" is "["bar", "baz"]"';
+is $pointer->get($hash, '/foo/0'), 'bar', '"/foo/0" is "bar"';
+is $pointer->get($hash, '/'),      0,     '"/" is 0';
+is $pointer->get($hash, '/a~1b'),  1,     '"/a~1b" is 1';
+is $pointer->get($hash, '/c%25d'), 2,     '"/c%25d" is 2';
+is $pointer->get($hash, '/e^f'),   3,     '"/e^f" is 3';
+is $pointer->get($hash, '/e%5Ef'), 3,     '"/e%5Ef" is 3';
+is $pointer->get($hash, '/g|h'),   4,     '"/g|h" is 4';
+is $pointer->get($hash, '/g%7Ch'), 4,     '"/g%7Ch" is 4';
+is $pointer->get($hash, '/i\\j'),  5,     '"/i\\\\j" is 5';
+is $pointer->get($hash, '/i%5Cj'), 5,     '"/i%5Cj" is 5';
+is $pointer->get($hash, '/k"l'),   6,     '"/k\\"l" is 6';
+is $pointer->get($hash, '/k%22l'), 6,     '"/k%22l" is 6';
+is $pointer->get($hash, '/ '),     7,     '"/ " is 7';
+is $pointer->get($hash, '/%20'),   7,     '"/%20" is 7';
+is $pointer->get($hash, '/m~0n'),  8,     '"/m~0n" is 8';
+
 done_testing();
